---
title: Praciscore
---
classDiagram
    User --> Club: managedClub
    User --> Club: homeClub
    User --> "*" Registration: registrations
    User --> "*" Score: scores
    class User {
        firstName: string
        lastName: string
        username: string
        email: string
        emailVerified: boolean
        password: string
        passwordChanged: DateTimeImmutable
        notBefore: DateTimeImmutable
        titles: string
        guns: string
        optics: string
        ammo: string
        sponsors: string
        divisions: string
        sports: string
        instagramHandle: string
        bio: string
        admin: int
    }
    Club --> "*" Gathering: gatherings
    class Club {
        website: string
        email: string
        address: string
        socials: string
    }
    Score "*" --> User: user
    Score "*" --> Gathering: gathering
    class Score {
        alpha: int
        charlie: int
        delta: int
        mike: int
        noShoot: int
    }

    Registration "*" --> User: user
    Registration "*" --> Gathering: gathering
    class Registration {
        division: ?string
        classification: ?string
        powerFactor: ?string
        memberNumber: string
        category: int
    }

    Gathering --> "*" Registration: registrations
    Gathering "*" --> Club: club
    Gathering --> "*" Score: scores
    class Gathering {
        address: string
        state: string
        city: string
        country: string
        description: string
        openDate: DateTimeImmutable
        closeDate: DateTimeImmutable
        startDate: DateTimeImmutable
        endDate: DateTimeImmutable
        waiver: string
        eventType: ?string
        matchType: ?string
        price: float
    }
    MatchType --> "*" Division: divisions
    MatchType --> "*" Classification: classes
    MatchType --> "*" Category: categories
    class MatchType {
        name: string
    }
    Division "*" --> MatchType: matchType
    class Division {
        name: string
    }
    Classification "*" --> MatchType: matchType
    class Classification {
        name: string
        ordinal: int
    }

    class Category {
        name: string
    }

    class Category {
        <<enumeration>>
        Junior: 0x1
        Senior: 0x2
        Super Senior: 0x3
        Lady: 0x4
        Law Enforcement: 0x5
        Military: 0x6
        Foreign: 0x7
        Distinguished Participant: 0x8
        Youth: 0x9
        Junior: 0x10
        Senior: 0x11
        Lady: 0x12
    }

    Video "*" --> User: user
    class Video {
        url: string
    }